--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-pandas 
-mlflow
 notebook
-numpy
-scikit-learn
 matplotlib
 python-box
-pyYAML
 tqdm
 ensure
-joblib
 types-PyYAML
 Flask
 flask-cors
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.1
+mlflow==2.14.3
+joblib==1.4.2
+pyyaml==6.0.2
+
+
+
+
